--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <body>
         <header>
             <h1>Search Daily Weather</h1>
+            <p>
+                <small
+                    >By default, we show Dhaka's weather, but you can search for any location as
+                    well.</small
+                >
+            </p>
             <input type="text" id="locationInput" placeholder="Enter city" />
             <button id="fetchWeather">Get Weather</button>
         </header>
